Add some fixes to documentation
